# LiteMind

./: .gitignore  README.md
android/: README.md  build.gradle  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/litemind/app/: MainActivity.kt  NativeBridge.kt
android/app/src/main/java/com/litemind/app/birefnet/: BiRefNetEngineManager.kt  MaskUtils.kt
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
docs/: README.md
jni/: CMakeLists.txt  README.md
jni/include/: BiRefNetEngine.h  LiteMind.h
jni/include/MNN/plugin/: PluginKernel.hpp
jni/src/: BiRefNetEngine.cpp  litemind_jni.cpp
models/: README.md
models/birefnet/: README.md  birefnet_infer.py  birefnet_infer_local.py  birefnet_infer_mnn.py  onnx2int8.py  quant.json  test.py
scripts/: README.md
